# snakeclef-2024-competition

./: .gitignore  =  README.md  pyproject.toml  test_model.py
scripts/: Interactive - get_dataloader.py.ipynb  create_model.py  download_data.sh  explore_folds.py  folds_creation.py  get_dataloader.py  hf_trainer_finetune.py
