[tool.poetry]
name = "this-studio"
version = "0.1.0"
description = ""
authors = ["Somesh  <someshfengde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
huggingface-hub = "^0.22.2"
onnxruntime = "^1.17.3"
torchvision = "^0.17.2"
tqdm = "^4.66.2"
timm = {git = "https://github.com/huggingface/pytorch-image-models.git", rev = "hiera"}
ipykernel = "^6.29.4"
pandas = "^2.2.2"
fastai = "^2.7.14"
ruff = "^0.4.1"
datasets = "^2.19.0"
hiera-transformer = "^0.1.4"
transformers = {git = "https://github.com/huggingface/transformers.git"} 
tokenizers = "==0.19.*"
evaluate = "^0.4.1"
accelerate = "^0.29.3"
wandb = "^0.16.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
